# ai-png

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: adam7.rs  decoder.rs  expand_paletted.rs  unfilter.rs
examples/: change-png-info.rs  corpus-bench.rs  png-generate.rs  pngcheck.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: buf_independent.rs  decode.rs  roundtrip.rs
png-afl/src/: main.rs
src/: adam7.rs  common.rs  encoder.rs  io_ext.rs  lib.rs  text_metadata.rs  traits.rs
src/decoder/: interlace_info.rs  mod.rs  stream.rs  transform.rs  unfiltering_buffer.rs  zlib.rs
src/decoder/transform/: palette.rs
src/filter/: paeth.rs
tests/: bugfixes.rs  check_testimages.rs  partial_decode.rs
